k8s-kbld/all.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - origins:
        - resolved:
            tag: 1.0.13
            url: docker.io/vfarcic/silly-demo:1.0.13
        - preresolved:
            url: index.docker.io/vfarcic/silly-demo@sha256:7e43403919d2c3d12214d8be50fe22ede4519e0306bd3b3d191f78c2ad8a75cc
        url: index.docker.io/vfarcic/silly-demo@sha256:7e43403919d2c3d12214d8be50fe22ede4519e0306bd3b3d191f78c2ad8a75cc
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
    spec:
      containers:
      - image: index.docker.io/vfarcic/silly-demo@sha256:7e43403919d2c3d12214d8be50fe22ede4519e0306bd3b3d191f78c2ad8a75cc
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: silly-demo
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  rules:
  - host: devopstoolkitseries.com
    http:
      paths:
      - backend:
          service:
            name: silly-demo
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: silly-demo
  type: ClusterIP
